# masters-thesis

./: README.md
analysis/: .gitignore  LICENSE  README.md  pyproject.toml
analysis/src/analysis/data/bronze/: eds.py  eq.py  utils.py
analysis/src/analysis/data/gold/: eds.py  eq.py  forecasting.py  full.py  utils.py
analysis/src/analysis/data/silver/: eds.py  eq.py  utils.py
analysis/src/analysis/modeling/: arima.json  lstm_point.keras  lstm_seq.keras  lstm_seq_feature_importance.csv  main.ipynb  utils.py
thesis/: .gitignore  Makefile  README.md  char_count.sh  main.tex  references.bib
thesis/sections/: abstract.tex  acknowledgements.tex  appendices.tex  conclusion.tex  discussion.tex  front.tex  introduction.tex  licensing.tex  literature-review.tex  methodology.tex  references.tex  results.tex  theory.tex  toc.tex
thesis/sections/figures/: lstm-architecture.tex  recurrent-neural-network-unfolded.tex  simple-neural-net-w-notation.tex  simple-neural-net.tex
